src/spl_parser.output
Terminals unused in grammar

   IN
   PACKED
   SET
   WITH


State 49 conflicts: 2 shift/reduce
State 172 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: program_head routine DOT

    2 program_head: PROGRAM ID SEMI

    3 routine: routine_head routine_body

    4 sub_routine: routine_head routine_body

    5 routine_head: label_part const_part type_part var_part routine_part

    6 label_part: %empty

    7 const_part: CONST const_expr_list
    8           | %empty

    9 const_expr_list: const_expr_list ID EQUAL const_value SEMI
   10                | ID EQUAL const_value SEMI

   11 const_value: INTEGER
   12            | REAL
   13            | CHAR
   14            | STRING
   15            | SYS_CON

   16 type_part: TYPE type_decl_list
   17          | %empty

   18 type_decl_list: type_decl_list type_definition
   19               | type_definition

   20 type_definition: ID EQUAL type_decl SEMI

   21 type_decl: simple_type_decl
   22          | array_type_decl
   23          | record_type_decl

   24 simple_type_decl: SYS_TYPE
   25                 | ID
   26                 | LP name_list RP
   27                 | const_value DOTDOT const_value
   28                 | MINUS const_value DOTDOT const_value
   29                 | MINUS const_value DOTDOT MINUS const_value
   30                 | ID DOTDOT ID

   31 array_type_decl: ARRAY LB simple_type_decl RB OF type_decl

   32 record_type_decl: RECORD field_decl_list _END

   33 field_decl_list: field_decl_list field_decl
   34                | field_decl

   35 field_decl: name_list COLON type_decl SEMI

   36 name_list: name_list COMMA ID
   37          | ID

   38 var_part: VAR var_decl_list
   39         | %empty

   40 var_decl_list: var_decl_list var_decl
   41              | var_decl

   42 var_decl: name_list COLON type_decl SEMI

   43 routine_part: routine_part function_decl
   44             | routine_part procedure_decl
   45             | function_decl
   46             | procedure_decl
   47             | %empty

   48 function_decl: function_head SEMI sub_routine SEMI

   49 function_head: FUNCTION ID parameters COLON simple_type_decl

   50 procedure_decl: procedure_head SEMI sub_routine SEMI

   51 procedure_head: PROCEDURE ID parameters

   52 parameters: LP para_decl_list RP
   53           | %empty

   54 para_decl_list: para_decl_list SEMI para_type_list
   55               | para_type_list

   56 para_type_list: var_para_list COLON simple_type_decl
   57               | val_para_list COLON simple_type_decl

   58 var_para_list: VAR name_list

   59 val_para_list: name_list

   60 routine_body: compound_stmt

   61 compound_stmt: _BEGIN stmt_list _END

   62 stmt_list: stmt_list stmt SEMI
   63          | %empty

   64 stmt: INTEGER COLON non_label_stmt
   65     | non_label_stmt

   66 non_label_stmt: assign_stmt
   67               | proc_stmt
   68               | compound_stmt
   69               | if_stmt
   70               | repeat_stmt
   71               | while_stmt
   72               | for_stmt
   73               | case_stmt
   74               | goto_stmt

   75 assign_stmt: ID ASSIGN expression
   76            | ID LB expression RB ASSIGN expression
   77            | ID DOT ID ASSIGN expression

   78 proc_stmt: ID
   79          | ID LP args_list RP
   80          | SYS_PROC
   81          | SYS_PROC LP expression_list RP
   82          | READ LP factor RP

   83 if_stmt: IF expression THEN stmt else_clause

   84 else_clause: ELSE stmt
   85            | %empty

   86 repeat_stmt: REPEAT stmt_list UNTIL expression

   87 while_stmt: WHILE expression DO stmt

   88 for_stmt: FOR ID ASSIGN expression direction expression DO stmt

   89 direction: TO
   90          | DOWNTO

   91 case_stmt: CASE expression OF case_expr_list _END

   92 case_expr_list: case_expr_list case_expr
   93               | case_expr

   94 case_expr: const_value COLON stmt SEMI
   95          | ID COLON stmt SEMI

   96 goto_stmt: GOTO INTEGER

   97 expression_list: expression_list COMMA expression
   98                | expression

   99 expression: expression GE expr
  100           | expression GT expr
  101           | expression LE expr
  102           | expression LT expr
  103           | expression EQUAL expr
  104           | expression UNEQUAL expr
  105           | expr

  106 expr: expr PLUS term
  107     | expr MINUS term
  108     | expr OR term
  109     | term

  110 term: term MUL factor
  111     | term DIV factor
  112     | term MOD factor
  113     | term AND factor
  114     | factor

  115 factor: ID
  116       | ID LP args_list RP
  117       | SYS_FUNCT
  118       | SYS_FUNCT LP args_list RP
  119       | const_value
  120       | LP expression RP
  121       | NOT factor
  122       | MINUS factor
  123       | ID LB expression RB
  124       | ID DOT ID

  125 args_list: args_list COMMA expression
  126          | expression


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
ASSIGN (258) 75 76 77 88
OR (259) 108
AND (260) 113
NOT (261) 121
EQUAL (262) 9 10 20 103
UNEQUAL (263) 104
GE (264) 99
GT (265) 100
LE (266) 101
LT (267) 102
PLUS (268) 106
MINUS (269) 28 29 107 122
MUL (270) 110
DIV (271) 111
MOD (272) 112
ARRAY (273) 31
_BEGIN (274) 61
CASE (275) 91
CONST (276) 7
DO (277) 87 88
DOWNTO (278) 90
ELSE (279) 84
_END (280) 32 61 91
FOR (281) 88
FUNCTION (282) 49
GOTO (283) 96
IF (284) 83
IN (285)
OF (286) 31 91
PACKED (287)
PROCEDURE (288) 51
PROGRAM (289) 2
RECORD (290) 32
REPEAT (291) 86
SET (292)
THEN (293) 83
TO (294) 89
TYPE (295) 16
UNTIL (296) 86
VAR (297) 38 58
WHILE (298) 87
WITH (299)
SYS_CON <int> (300) 15
SYS_FUNCT <int> (301) 117 118
READ (302) 82
SYS_PROC <int> (303) 80 81
SYS_TYPE <int> (304) 24
INTEGER <int> (305) 11 64 96
REAL <double> (306) 12
CHAR <char> (307) 13
STRING <std::string> (308) 14
ID <std::string> (309) 2 9 10 20 25 30 36 37 49 51 75 76 77 78 79 88
    95 115 116 123 124
LP (310) 26 52 79 81 82 116 118 120
RP (311) 26 52 79 81 82 116 118 120
LB (312) 31 76 123
RB (313) 31 76 123
COMMA (314) 36 97 125
COLON (315) 35 42 49 56 57 64 94 95
DOTDOT (316) 27 28 29 30
DOT (317) 1 77 124
SEMI (318) 2 9 10 20 35 42 48 50 54 62 94 95


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program (65)
    on left: 1, on right: 0
program_head (66)
    on left: 2, on right: 1
routine (67)
    on left: 3, on right: 1
sub_routine (68)
    on left: 4, on right: 48 50
routine_head (69)
    on left: 5, on right: 3 4
label_part (70)
    on left: 6, on right: 5
const_part (71)
    on left: 7 8, on right: 5
const_expr_list (72)
    on left: 9 10, on right: 7 9
const_value (73)
    on left: 11 12 13 14 15, on right: 9 10 27 28 29 94 119
type_part (74)
    on left: 16 17, on right: 5
type_decl_list (75)
    on left: 18 19, on right: 16 18
type_definition (76)
    on left: 20, on right: 18 19
type_decl (77)
    on left: 21 22 23, on right: 20 31 35 42
simple_type_decl (78)
    on left: 24 25 26 27 28 29 30, on right: 21 31 49 56 57
array_type_decl (79)
    on left: 31, on right: 22
record_type_decl (80)
    on left: 32, on right: 23
field_decl_list (81)
    on left: 33 34, on right: 32 33
field_decl (82)
    on left: 35, on right: 33 34
name_list (83)
    on left: 36 37, on right: 26 35 36 42 58 59
var_part (84)
    on left: 38 39, on right: 5
var_decl_list (85)
    on left: 40 41, on right: 38 40
var_decl (86)
    on left: 42, on right: 40 41
routine_part (87)
    on left: 43 44 45 46 47, on right: 5 43 44
function_decl (88)
    on left: 48, on right: 43 45
function_head (89)
    on left: 49, on right: 48
procedure_decl (90)
    on left: 50, on right: 44 46
procedure_head (91)
    on left: 51, on right: 50
parameters (92)
    on left: 52 53, on right: 49 51
para_decl_list (93)
    on left: 54 55, on right: 52 54
para_type_list (94)
    on left: 56 57, on right: 54 55
var_para_list (95)
    on left: 58, on right: 56
val_para_list (96)
    on left: 59, on right: 57
routine_body (97)
    on left: 60, on right: 3 4
compound_stmt (98)
    on left: 61, on right: 60 68
stmt_list (99)
    on left: 62 63, on right: 61 62 86
stmt (100)
    on left: 64 65, on right: 62 83 84 87 88 94 95
non_label_stmt (101)
    on left: 66 67 68 69 70 71 72 73 74, on right: 64 65
assign_stmt (102)
    on left: 75 76 77, on right: 66
proc_stmt (103)
    on left: 78 79 80 81 82, on right: 67
if_stmt (104)
    on left: 83, on right: 69
else_clause (105)
    on left: 84 85, on right: 83
repeat_stmt (106)
    on left: 86, on right: 70
while_stmt (107)
    on left: 87, on right: 71
for_stmt (108)
    on left: 88, on right: 72
direction (109)
    on left: 89 90, on right: 88
case_stmt (110)
    on left: 91, on right: 73
case_expr_list (111)
    on left: 92 93, on right: 91 92
case_expr (112)
    on left: 94 95, on right: 92 93
goto_stmt (113)
    on left: 96, on right: 74
expression_list (114)
    on left: 97 98, on right: 81 97
expression (115)
    on left: 99 100 101 102 103 104 105, on right: 75 76 77 83 86 87
    88 91 97 98 99 100 101 102 103 104 120 123 125 126
expr (116)
    on left: 106 107 108 109, on right: 99 100 101 102 103 104 105
    106 107 108
term (117)
    on left: 110 111 112 113 114, on right: 106 107 108 109 110 111
    112 113
factor (118)
    on left: 115 116 117 118 119 120 121 122 123 124, on right: 82
    110 111 112 113 114 121 122
args_list (119)
    on left: 125 126, on right: 79 116 118 125


State 0

    0 $accept: . program "end of file"

    PROGRAM  shift, and go to state 1

    program       go to state 2
    program_head  go to state 3


State 1

    2 program_head: PROGRAM . ID SEMI

    ID  shift, and go to state 4


State 2

    0 $accept: program . "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 program: program_head . routine DOT

    $default  reduce using rule 6 (label_part)

    routine       go to state 6
    routine_head  go to state 7
    label_part    go to state 8


State 4

    2 program_head: PROGRAM ID . SEMI

    SEMI  shift, and go to state 9


State 5

    0 $accept: program "end of file" .

    $default  accept


State 6

    1 program: program_head routine . DOT

    DOT  shift, and go to state 10


State 7

    3 routine: routine_head . routine_body

    _BEGIN  shift, and go to state 11

    routine_body   go to state 12
    compound_stmt  go to state 13


State 8

    5 routine_head: label_part . const_part type_part var_part routine_part

    CONST  shift, and go to state 14

    $default  reduce using rule 8 (const_part)

    const_part  go to state 15


State 9

    2 program_head: PROGRAM ID SEMI .

    $default  reduce using rule 2 (program_head)


State 10

    1 program: program_head routine DOT .

    $default  reduce using rule 1 (program)


State 11

   61 compound_stmt: _BEGIN . stmt_list _END

    $default  reduce using rule 63 (stmt_list)

    stmt_list  go to state 16


State 12

    3 routine: routine_head routine_body .

    $default  reduce using rule 3 (routine)


State 13

   60 routine_body: compound_stmt .

    $default  reduce using rule 60 (routine_body)


State 14

    7 const_part: CONST . const_expr_list

    ID  shift, and go to state 17

    const_expr_list  go to state 18


State 15

    5 routine_head: label_part const_part . type_part var_part routine_part

    TYPE  shift, and go to state 19

    $default  reduce using rule 17 (type_part)

    type_part  go to state 20


State 16

   61 compound_stmt: _BEGIN stmt_list . _END
   62 stmt_list: stmt_list . stmt SEMI

    _BEGIN    shift, and go to state 11
    CASE      shift, and go to state 21
    _END      shift, and go to state 22
    FOR       shift, and go to state 23
    GOTO      shift, and go to state 24
    IF        shift, and go to state 25
    REPEAT    shift, and go to state 26
    WHILE     shift, and go to state 27
    READ      shift, and go to state 28
    SYS_PROC  shift, and go to state 29
    INTEGER   shift, and go to state 30
    ID        shift, and go to state 31

    compound_stmt   go to state 32
    stmt            go to state 33
    non_label_stmt  go to state 34
    assign_stmt     go to state 35
    proc_stmt       go to state 36
    if_stmt         go to state 37
    repeat_stmt     go to state 38
    while_stmt      go to state 39
    for_stmt        go to state 40
    case_stmt       go to state 41
    goto_stmt       go to state 42


State 17

   10 const_expr_list: ID . EQUAL const_value SEMI

    EQUAL  shift, and go to state 43


State 18

    7 const_part: CONST const_expr_list .
    9 const_expr_list: const_expr_list . ID EQUAL const_value SEMI

    ID  shift, and go to state 44

    $default  reduce using rule 7 (const_part)


State 19

   16 type_part: TYPE . type_decl_list

    ID  shift, and go to state 45

    type_decl_list   go to state 46
    type_definition  go to state 47


State 20

    5 routine_head: label_part const_part type_part . var_part routine_part

    VAR  shift, and go to state 48

    $default  reduce using rule 39 (var_part)

    var_part  go to state 49


State 21

   91 case_stmt: CASE . expression OF case_expr_list _END

    NOT        shift, and go to state 50
    MINUS      shift, and go to state 51
    SYS_CON    shift, and go to state 52
    SYS_FUNCT  shift, and go to state 53
    INTEGER    shift, and go to state 54
    REAL       shift, and go to state 55
    CHAR       shift, and go to state 56
    STRING     shift, and go to state 57
    ID         shift, and go to state 58
    LP         shift, and go to state 59

    const_value  go to state 60
    expression   go to state 61
    expr         go to state 62
    term         go to state 63
    factor       go to state 64


State 22

   61 compound_stmt: _BEGIN stmt_list _END .

    $default  reduce using rule 61 (compound_stmt)


State 23

   88 for_stmt: FOR . ID ASSIGN expression direction expression DO stmt

    ID  shift, and go to state 65


State 24

   96 goto_stmt: GOTO . INTEGER

    INTEGER  shift, and go to state 66


State 25

   83 if_stmt: IF . expression THEN stmt else_clause

    NOT        shift, and go to state 50
    MINUS      shift, and go to state 51
    SYS_CON    shift, and go to state 52
    SYS_FUNCT  shift, and go to state 53
    INTEGER    shift, and go to state 54
    REAL       shift, and go to state 55
    CHAR       shift, and go to state 56
    STRING     shift, and go to state 57
    ID         shift, and go to state 58
    LP         shift, and go to state 59

    const_value  go to state 60
    expression   go to state 67
    expr         go to state 62
    term         go to state 63
    factor       go to state 64


State 26

   86 repeat_stmt: REPEAT . stmt_list UNTIL expression

    $default  reduce using rule 63 (stmt_list)

    stmt_list  go to state 68


State 27

   87 while_stmt: WHILE . expression DO stmt

    NOT        shift, and go to state 50
    MINUS      shift, and go to state 51
    SYS_CON    shift, and go to state 52
    SYS_FUNCT  shift, and go to state 53
    INTEGER    shift, and go to state 54
    REAL       shift, and go to state 55
    CHAR       shift, and go to state 56
    STRING     shift, and go to state 57
    ID         shift, and go to state 58
    LP         shift, and go to state 59

    const_value  go to state 60
    expression   go to state 69
    expr         go to state 62
    term         go to state 63
    factor       go to state 64


State 28

   82 proc_stmt: READ . LP factor RP

    LP  shift, and go to state 70


State 29

   80 proc_stmt: SYS_PROC .
   81          | SYS_PROC . LP expression_list RP

    LP  shift, and go to state 71

    $default  reduce using rule 80 (proc_stmt)


State 30

   64 stmt: INTEGER . COLON non_label_stmt

    COLON  shift, and go to state 72


State 31

   75 assign_stmt: ID . ASSIGN expression
   76            | ID . LB expression RB ASSIGN expression
   77            | ID . DOT ID ASSIGN expression
   78 proc_stmt: ID .
   79          | ID . LP args_list RP

    ASSIGN  shift, and go to state 73
    LP      shift, and go to state 74
    LB      shift, and go to state 75
    DOT     shift, and go to state 76

    $default  reduce using rule 78 (proc_stmt)


State 32

   68 non_label_stmt: compound_stmt .

    $default  reduce using rule 68 (non_label_stmt)


State 33

   62 stmt_list: stmt_list stmt . SEMI

    SEMI  shift, and go to state 77


State 34

   65 stmt: non_label_stmt .

    $default  reduce using rule 65 (stmt)


State 35

   66 non_label_stmt: assign_stmt .

    $default  reduce using rule 66 (non_label_stmt)


State 36

   67 non_label_stmt: proc_stmt .

    $default  reduce using rule 67 (non_label_stmt)


State 37

   69 non_label_stmt: if_stmt .

    $default  reduce using rule 69 (non_label_stmt)


State 38

   70 non_label_stmt: repeat_stmt .

    $default  reduce using rule 70 (non_label_stmt)


State 39

   71 non_label_stmt: while_stmt .

    $default  reduce using rule 71 (non_label_stmt)


State 40

   72 non_label_stmt: for_stmt .

    $default  reduce using rule 72 (non_label_stmt)


State 41

   73 non_label_stmt: case_stmt .

    $default  reduce using rule 73 (non_label_stmt)


State 42

   74 non_label_stmt: goto_stmt .

    $default  reduce using rule 74 (non_label_stmt)


State 43

   10 const_expr_list: ID EQUAL . const_value SEMI

    SYS_CON  shift, and go to state 52
    INTEGER  shift, and go to state 54
    REAL     shift, and go to state 55
    CHAR     shift, and go to state 56
    STRING   shift, and go to state 57

    const_value  go to state 78


State 44

    9 const_expr_list: const_expr_list ID . EQUAL const_value SEMI

    EQUAL  shift, and go to state 79


State 45

   20 type_definition: ID . EQUAL type_decl SEMI

    EQUAL  shift, and go to state 80


State 46

   16 type_part: TYPE type_decl_list .
   18 type_decl_list: type_decl_list . type_definition

    ID  shift, and go to state 45

    $default  reduce using rule 16 (type_part)

    type_definition  go to state 81


State 47

   19 type_decl_list: type_definition .

    $default  reduce using rule 19 (type_decl_list)


State 48

   38 var_part: VAR . var_decl_list

    ID  shift, and go to state 82

    name_list      go to state 83
    var_decl_list  go to state 84
    var_decl       go to state 85


State 49

    5 routine_head: label_part const_part type_part var_part . routine_part

    FUNCTION   shift, and go to state 86
    PROCEDURE  shift, and go to state 87

    FUNCTION   [reduce using rule 47 (routine_part)]
    PROCEDURE  [reduce using rule 47 (routine_part)]
    $default   reduce using rule 47 (routine_part)

    routine_part    go to state 88
    function_decl   go to state 89
    function_head   go to state 90
    procedure_decl  go to state 91
    procedure_head  go to state 92


State 50

  121 factor: NOT . factor

    NOT        shift, and go to state 50
    MINUS      shift, and go to state 51
    SYS_CON    shift, and go to state 52
    SYS_FUNCT  shift, and go to state 53
    INTEGER    shift, and go to state 54
    REAL       shift, and go to state 55
    CHAR       shift, and go to state 56
    STRING     shift, and go to state 57
    ID         shift, and go to state 58
    LP         shift, and go to state 59

    const_value  go to state 60
    factor       go to state 93


State 51

  122 factor: MINUS . factor

    NOT        shift, and go to state 50
    MINUS      shift, and go to state 51
    SYS_CON    shift, and go to state 52
    SYS_FUNCT  shift, and go to state 53
    INTEGER    shift, and go to state 54
    REAL       shift, and go to state 55
    CHAR       shift, and go to state 56
    STRING     shift, and go to state 57
    ID         shift, and go to state 58
    LP         shift, and go to state 59

    const_value  go to state 60
    factor       go to state 94


State 52

   15 const_value: SYS_CON .

    $default  reduce using rule 15 (const_value)


State 53

  117 factor: SYS_FUNCT .
  118       | SYS_FUNCT . LP args_list RP

    LP  shift, and go to state 95

    $default  reduce using rule 117 (factor)


State 54

   11 const_value: INTEGER .

    $default  reduce using rule 11 (const_value)


State 55

   12 const_value: REAL .

    $default  reduce using rule 12 (const_value)


State 56

   13 const_value: CHAR .

    $default  reduce using rule 13 (const_value)


State 57

   14 const_value: STRING .

    $default  reduce using rule 14 (const_value)


State 58

  115 factor: ID .
  116       | ID . LP args_list RP
  123       | ID . LB expression RB
  124       | ID . DOT ID

    LP   shift, and go to state 96
    LB   shift, and go to state 97
    DOT  shift, and go to state 98

    $default  reduce using rule 115 (factor)


State 59

  120 factor: LP . expression RP

    NOT        shift, and go to state 50
    MINUS      shift, and go to state 51
    SYS_CON    shift, and go to state 52
    SYS_FUNCT  shift, and go to state 53
    INTEGER    shift, and go to state 54
    REAL       shift, and go to state 55
    CHAR       shift, and go to state 56
    STRING     shift, and go to state 57
    ID         shift, and go to state 58
    LP         shift, and go to state 59

    const_value  go to state 60
    expression   go to state 99
    expr         go to state 62
    term         go to state 63
    factor       go to state 64


State 60

  119 factor: const_value .

    $default  reduce using rule 119 (factor)


State 61

   91 case_stmt: CASE expression . OF case_expr_list _END
   99 expression: expression . GE expr
  100           | expression . GT expr
  101           | expression . LE expr
  102           | expression . LT expr
  103           | expression . EQUAL expr
  104           | expression . UNEQUAL expr

    EQUAL    shift, and go to state 100
    UNEQUAL  shift, and go to state 101
    GE       shift, and go to state 102
    GT       shift, and go to state 103
    LE       shift, and go to state 104
    LT       shift, and go to state 105
    OF       shift, and go to state 106


State 62

  105 expression: expr .
  106 expr: expr . PLUS term
  107     | expr . MINUS term
  108     | expr . OR term

    OR     shift, and go to state 107
    PLUS   shift, and go to state 108
    MINUS  shift, and go to state 109

    $default  reduce using rule 105 (expression)


State 63

  109 expr: term .
  110 term: term . MUL factor
  111     | term . DIV factor
  112     | term . MOD factor
  113     | term . AND factor

    AND  shift, and go to state 110
    MUL  shift, and go to state 111
    DIV  shift, and go to state 112
    MOD  shift, and go to state 113

    $default  reduce using rule 109 (expr)


State 64

  114 term: factor .

    $default  reduce using rule 114 (term)


State 65

   88 for_stmt: FOR ID . ASSIGN expression direction expression DO stmt

    ASSIGN  shift, and go to state 114


State 66

   96 goto_stmt: GOTO INTEGER .

    $default  reduce using rule 96 (goto_stmt)


State 67

   83 if_stmt: IF expression . THEN stmt else_clause
   99 expression: expression . GE expr
  100           | expression . GT expr
  101           | expression . LE expr
  102           | expression . LT expr
  103           | expression . EQUAL expr
  104           | expression . UNEQUAL expr

    EQUAL    shift, and go to state 100
    UNEQUAL  shift, and go to state 101
    GE       shift, and go to state 102
    GT       shift, and go to state 103
    LE       shift, and go to state 104
    LT       shift, and go to state 105
    THEN     shift, and go to state 115


State 68

   62 stmt_list: stmt_list . stmt SEMI
   86 repeat_stmt: REPEAT stmt_list . UNTIL expression

    _BEGIN    shift, and go to state 11
    CASE      shift, and go to state 21
    FOR       shift, and go to state 23
    GOTO      shift, and go to state 24
    IF        shift, and go to state 25
    REPEAT    shift, and go to state 26
    UNTIL     shift, and go to state 116
    WHILE     shift, and go to state 27
    READ      shift, and go to state 28
    SYS_PROC  shift, and go to state 29
    INTEGER   shift, and go to state 30
    ID        shift, and go to state 31

    compound_stmt   go to state 32
    stmt            go to state 33
    non_label_stmt  go to state 34
    assign_stmt     go to state 35
    proc_stmt       go to state 36
    if_stmt         go to state 37
    repeat_stmt     go to state 38
    while_stmt      go to state 39
    for_stmt        go to state 40
    case_stmt       go to state 41
    goto_stmt       go to state 42


State 69

   87 while_stmt: WHILE expression . DO stmt
   99 expression: expression . GE expr
  100           | expression . GT expr
  101           | expression . LE expr
  102           | expression . LT expr
  103           | expression . EQUAL expr
  104           | expression . UNEQUAL expr

    EQUAL    shift, and go to state 100
    UNEQUAL  shift, and go to state 101
    GE       shift, and go to state 102
    GT       shift, and go to state 103
    LE       shift, and go to state 104
    LT       shift, and go to state 105
    DO       shift, and go to state 117


State 70

   82 proc_stmt: READ LP . factor RP

    NOT        shift, and go to state 50
    MINUS      shift, and go to state 51
    SYS_CON    shift, and go to state 52
    SYS_FUNCT  shift, and go to state 53
    INTEGER    shift, and go to state 54
    REAL       shift, and go to state 55
    CHAR       shift, and go to state 56
    STRING     shift, and go to state 57
    ID         shift, and go to state 58
    LP         shift, and go to state 59

    const_value  go to state 60
    factor       go to state 118


State 71

   81 proc_stmt: SYS_PROC LP . expression_list RP
